--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>核融合パズル - Nuclear Fusion Game</title>
   <link rel="stylesheet" href="style.css">
 
-  <!-- ★ 修正：タップゾーン用のスタイルを追加 -->
+  <!-- タップゾーン用のスタイル -->
   <style>
     .upgrade-panel, .tap-zone {
       margin-top: 12px;
@@ -102,7 +102,7 @@
           </button>
         </div>
 
-        <!-- ★ 修正：タップゾーン -->
+        <!-- タップゾーン -->
         <div id="tap-zone" class="tap-zone">
           タップで<br>エネルギー &amp; 水素を補充
         </div>
